# bento

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  action.yml  install.sh
.github/workflows/: action-selftest.yml  ci.yml  e2e.yml  homebrew-bump.yml  release.yml
crates/bento-adapters/: Cargo.toml
crates/bento-adapters/src/: adapter.rs  bun.rs  cargo.rs  cloudflare_pages.rs  cloudflare_worker.rs  deno.rs  diagnostic.rs  diagnostic_record.rs  go.rs  gradle.rs  integration.rs  lib.rs  linear.rs  maven.rs  node_common.rs  node_npm.rs  php.rs  plugin_adapter.rs  plugin_search.rs  pnpm.rs  probe.rs  python.rs  python_uv.rs  railway.rs  registry.rs  ruby.rs  slack.rs  vercel.rs  yarn.rs
crates/bento-adapters/tests/: plugin_e2e.rs
crates/bento-cache/: Cargo.toml
crates/bento-cache/src/: key.rs  lib.rs  local.rs  manifest.rs  remote_api.rs  remote_bearer.rs  token.rs
crates/bento-cache/tests/: remote_bearer_roundtrip.rs
crates/bento-cas-protocol/: Cargo.toml
crates/bento-cas-protocol/src/: lib.rs
crates/bento-cli/: Cargo.toml
crates/bento-cli/src/: artifacts.rs  cli.rs  errors.rs  init.rs  linear_notify.rs  login.rs  main.rs  mcp.rs  plan_print.rs  plugins.rs  prime.rs  release.rs  run_print.rs  scaffold.rs  schema.rs  secret.rs  slack_post.rs  toolchain.rs  why.rs
crates/bento-cli/src/migrate/: lerna.rs  make.rs  mod.rs  moon.rs  nx.rs  rush.rs  turbo.rs
crates/bento-cli/tests/: e2e.rs
crates/bento-cli/tests/e2e/: common.rs  container.rs  deploy.rs  migrate.rs  monorepo_cargo_pnpm.rs  monorepo_dep_cascade.rs  monorepo_go_node.rs
crates/bento-config/: Cargo.toml
crates/bento-config/src/: error.rs  lib.rs  schema.rs  workspace.rs
crates/bento-core/: Cargo.toml
crates/bento-core/src/: artifacts.rs  cascade.rs  deploy_state.rs  diff.rs  discovery.rs  doctor.rs  garnish.rs  graph.rs  inventory.rs  lib.rs  plan.rs  prime.rs  report.rs  run.rs  why.rs
crates/bento-core/src/diagnostic_parsers/: cargo_message.rs  eslint.rs  golangci_lint.rs  mod.rs  ruff.rs
crates/bento-mcp/: Cargo.toml
crates/bento-mcp/src/: main.rs  workspace_ctx.rs
crates/bento-plugin/: Cargo.toml
crates/bento-plugin/src/: client.rs  lib.rs  protocol.rs  wire.rs
crates/bento-plugin/tests/: fixture.rs
crates/bento-toolchain/: Cargo.toml
crates/bento-toolchain/src/: installer.rs  lib.rs  node.rs  python.rs  resolver.rs  store.rs  target.rs  tool.rs  uv.rs
crates/bento-watch/: Cargo.toml
crates/bento-watch/src/: lib.rs
docs/: adopt-existing-repo.md  agents.md  configuration.md  deploying.md  new-project.md  plugins.md
examples/bento-adapter-noop/: Cargo.toml
examples/bento-adapter-noop/src/: lib.rs  main.rs
scripts/action/: run.sh
skills/bento/: SKILL.md
skills/bento/hooks/: bento-guard.sh
tests/e2e/fixtures/action-selftest-bun/: bento.toml
tests/e2e/fixtures/action-selftest-python-uv/: bento.toml
tests/e2e/fixtures/action-selftest-python-uv/bentos/: prod.toml
tests/e2e/fixtures/action-selftest-python-uv/service/: dish.toml  pyproject.toml
tests/e2e/fixtures/bun-hello/: package.json
tests/e2e/fixtures/cargo-hello/src/: main.rs
tests/e2e/fixtures/container-go/: .gitignore  bento.toml
tests/e2e/fixtures/container-go/bentos/: prod.toml
tests/e2e/fixtures/deno-hello/: deno.json  main.ts  main_test.ts
tests/e2e/fixtures/deploy-railway/app/: railway.toml
tests/e2e/fixtures/go-hello/: main.go
tests/e2e/fixtures/gradle-hello/: build.gradle  gradlew
tests/e2e/fixtures/maven-hello/: pom.xml
tests/e2e/fixtures/maven-hello/src/main/java/io/disruptorlabs/bento/: Hello.java
tests/e2e/fixtures/migrate-make/: Makefile  README.md
tests/e2e/fixtures/migrate-moon/: README.md
tests/e2e/fixtures/migrate-moon/.moon/: workspace.yml
tests/e2e/fixtures/migrate-rush/: README.md
tests/e2e/fixtures/monorepo-cargo-pnpm/bentos/: prod.toml
tests/e2e/fixtures/monorepo-cargo-pnpm/web/: package.json
tests/e2e/fixtures/monorepo-dep-cascade/: bento.toml
tests/e2e/fixtures/monorepo-dep-cascade/bentos/: prod.toml
tests/e2e/fixtures/monorepo-go-node/: bento.toml
tests/e2e/fixtures/monorepo-go-node/bentos/: prod.toml
tests/e2e/fixtures/monorepo-go-node/frontend/: package.json
tests/e2e/fixtures/monorepo-go-node/frontend/src/: index.js
tests/e2e/fixtures/node-npm-hello/: package.json
tests/e2e/fixtures/node-pnpm-hello/: package.json
tests/e2e/fixtures/node-yarn-hello/: package.json
tests/e2e/fixtures/php-hello/: composer.json
tests/e2e/fixtures/php-hello/src/: hello.php
tests/e2e/fixtures/python-hello/: pyproject.toml
tests/e2e/fixtures/python-hello/src/python_hello/: __init__.py
tests/e2e/fixtures/ruby-hello/: Gemfile  hello.rb
