[package]
name = "bento-adapter-noop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Reference 'noop' bento language adapter — a minimal example of the subprocess plugin protocol"
publish = false

[[bin]]
name = "bento-adapter-noop"
path = "src/main.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
